# TRender

./: .gitattributes  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  Readme.md  autorun.sh  cmake_clean.sh  imgui.ini
Game/: CMakeLists.txt  ExampleLayer.cpp  ExampleLayer.h  GameApp.cpp  Makefile  cmake_install.cmake
RenderCore/: CMakeLists.txt  EntryPoint.h  Makefile  TRender.h  cmake_install.cmake
RenderCore/Camera/: BaseCamera.cpp  BaseCamera.h  BaseCameraController.cpp  BaseCameraController.h  CameraHead.h  OrthoCamera.cpp  OrthoCamera.h  OrthoCameraController.cpp  OrthoCameraController.h
RenderCore/Common/: CommonHead.h  KeyCode.h  MouseButtonCode.h  Thead.h  Tlog.cpp  Tlog.h
RenderCore/Core/: Application.cpp  Application.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  CoreHead.h  EntryPoint.h  Input.cpp  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Window.cpp  Window.h
RenderCore/Event/: AppRenderEvent.h  AppTickEvent.h  AppUpdateEvent.h  Event.h  EventDispatcher.h  EventHead.h  KeyEvent.h  KeyPressedEvent.h  KeyReleasedEvent.h  KeyTypedEvent.h  MouseButtonEvent.h  MouseButtonPressedEvent.h  MouseButtonReleasedEvent.h  MouseMovedEvent.h  MouseScorlledEvent.h  WindowCloseEvent.h  WindowResizeEvent.h
RenderCore/Graphics/: GraphicsHead.h  Window.cpp  Window.h
RenderCore/Graphics/BaseGraphics/: BaseContext.cpp  BaseContext.h  BaseGraphics.cpp  BaseGraphics.h  BaseGraphicsHead.h  BaseShader.cpp  BaseShader.h  BufferLayout.cpp  BufferLayout.h  GraphicsAPI.cpp  GraphicsAPI.h  GraphicsManager.cpp  GraphicsManager.h  IndexBuffer.cpp  IndexBuffer.h  Shader.h  ShaderLibrary.cpp  ShaderLibrary.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
RenderCore/Graphics/GLGraphics/: GLContext.cpp  GLContext.h  GLGraphicsAPI.cpp  GLGraphicsAPI.h  GLGraphicsHead.h  GLIndexBuffer.cpp  GLIndexBuffer.h  GLShader.cpp  GLShader.h  GLVertexArray.cpp  GLVertexArray.h  GLVertexBuffer.cpp  GLVertexBuffer.h
RenderCore/Gui/: GuiHead.h
RenderCore/Gui/Imgui/: ImguiGLFW.cpp  ImguiHead.h  ImguiLayer.cpp  ImguiLayer.h
RenderCore/Gui/Nuklear/: NuklearGLFW.h  NuklearHead.h  NuklearLayer.h
RenderCore/Imgui/: ImguiHead.h  ImguiLayer.cpp  ImguiLayer.h  ImguiOpenGLRender.cpp  imgui_impl_opengl3.cpp
RenderCore/Maths/: MathsHead.h  mat4.cpp  mat4.h  maths.h  maths_func.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
Sample/: CMakeLists.txt  main.cpp
include/glm/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/glew/: Makefile  cmake_install.cmake
lib/glfw/: CMakeLists.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
lib/glfw/src/: Makefile  cmake_install.cmake
lib/imgui/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/imgui/examples/example_glfw_opengl3/: main.cpp
lib/nuklear/: CMakeLists.txt  Makefile  cmake_install.cmake
